--- a/AhReview/app/src/main/res/layout/activity_login.xml
+++ b/AhReview/app/src/main/res/layout/activity_login.xml
@@ -30,13 +30,13 @@
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:text="AhReview에 온걸 환영해요"
-                android:textSize="28sp"
+                android:textSize="24sp"
                 android:layout_marginBottom="20dp"/>
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="80dp"
-                android:src="@drawable/naver_login_btn"/>
+            <com.nhn.android.naverlogin.ui.view.OAuthLoginButton
+                android:id="@+id/naver_login_btn"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"/>
 
         </LinearLayout>
 
