--- a/AhReview/app/src/main/res/values/dimen.xml
+++ b/AhReview/app/src/main/res/values/dimen.xml
@@ -3,6 +3,7 @@
 
     <dimen name="title">24sp</dimen>
     <dimen name="sub_title">20sp</dimen>
+    <dimen name="little_title">18sp</dimen>
     <dimen name="content">16sp</dimen>
     <dimen name="cp_text">10sp</dimen>
 </resources>
