--- a/AhReview/app/src/main/res/layout/activity_find_store.xml
+++ b/AhReview/app/src/main/res/layout/activity_find_store.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="vm"
+            type="com.hackathon.ahreview.ui.findStore.FindStoreViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
