--- a/AhReview/app/src/main/res/values/colors.xml
+++ b/AhReview/app/src/main/res/values/colors.xml
@@ -13,4 +13,7 @@
     <color name="search_background">#52734D</color>
     <color name="title_line">#898989</color>
     <color name="location_color">#3C3C3C</color>
+    <color name="detail_average">#616161</color>
+    <color name="activation_color">#52734D</color>
+    <color name="date_color">#ABABAB</color>
 </resources>
