--- a/AhReview/app/src/main/res/layout/detail_review_item.xml
+++ b/AhReview/app/src/main/res/layout/detail_review_item.xml
@@ -133,6 +133,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/reply_review_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp">
