--- a/AhReview/app/src/main/res/layout/activity_detail_store.xml
+++ b/AhReview/app/src/main/res/layout/activity_detail_store.xml
@@ -5,6 +5,9 @@
 
     <data>
 
+        <variable
+            name="vm"
+            type="com.hackathon.ahreview.ui.detailStore.DetailStoreViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,6 +22,7 @@
             android:layout_marginStart="6dp"
             android:layout_marginTop="10dp"
             android:background="@android:color/transparent"
+            android:onClick="@{() -> vm.onClickBackBtn()}"
             android:padding="20dp"
             android:src="@drawable/ic_back_btn"
             app:layout_constraintStart_toStartOf="parent"
