--- a/AhReview/app/src/main/res/layout/activity_detail_store.xml
+++ b/AhReview/app/src/main/res/layout/activity_detail_store.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="vm"
+            type="com.hackathon.ahreview.ui.detailStore.DetailStoreViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -236,6 +238,7 @@
             android:text="리뷰쓰기"
             android:textColor="@color/white"
             android:textSize="@dimen/content"
+            android:onClick="@{vm::onClickWriteReview}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
