--- a/AhReview/app/src/main/res/layout/activity_write_review.xml
+++ b/AhReview/app/src/main/res/layout/activity_write_review.xml
@@ -123,7 +123,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="10dp"
-                        android:background="null"
+                        android:background="#aaaaaa"
                         android:gravity="top"
                         android:hint="가게에 대한 솔직한 리뷰를 남겨주세요."
                         android:inputType="textMultiLine"
