--- a/AhReview/app/src/main/res/layout/detail_review_item.xml
+++ b/AhReview/app/src/main/res/layout/detail_review_item.xml
@@ -130,11 +130,10 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/imageBtn_speaker2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="8dp"
+                android:padding="15dp"
                 android:background="@android:color/transparent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/reviewD_date"
