--- a/AhReview/app/src/main/res/layout/my_review_item.xml
+++ b/AhReview/app/src/main/res/layout/my_review_item.xml
@@ -110,5 +110,17 @@
             app:layout_constraintTop_toBottomOf="@+id/cardView"
             tools:text="이 집 정말로 레알 맛있네요!!  또 오겠습니다~~" />
 
+        <ImageButton
+            android:padding="15dp"
+            android:id="@+id/imageBtn_speaker1"
+            android:layout_width="wrap_content"
+            android:background="@android:color/transparent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_speaker" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
