[ADD] store list code add

--- a/AhReview/app/src/main/res/layout/activity_find_store.xml
+++ b/AhReview/app/src/main/res/layout/activity_find_store.xml
@@ -55,6 +55,7 @@
             app:layout_constraintTop_toBottomOf="@+id/back_btn" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/store_recycler"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="20dp"
