--- a/AhReview/app/src/main/res/layout/activity_main.xml
+++ b/AhReview/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,8 @@
         android:layout_height="match_parent"
         tools:context=".ui.main.MainActivity">
 
-
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/user_image"
             android:layout_width="50dp"
             android:layout_height="50dp"
@@ -24,7 +24,7 @@
             android:layout_marginTop="32dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/avatars" />
+            tools:src="@tools:sample/avatars"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -69,7 +69,7 @@
             app:layout_constraintTop_toBottomOf="@+id/user_image" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/tv_reviewCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
