--- a/AhReview/app/src/main/res/layout/store_item.xml
+++ b/AhReview/app/src/main/res/layout/store_item.xml
@@ -8,6 +8,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/store_item_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/review_background"
