--- a/AhReview/app/src/main/res/layout/activity_detail_store.xml
+++ b/AhReview/app/src/main/res/layout/activity_detail_store.xml
@@ -165,7 +165,7 @@
                     app:srcCompat="@drawable/location" />
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/tv_location1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
